--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title></title>
 </head>
 
 <body>
-<h1>Hello world!</h1>
-<h2>Nice to see You here!</h2>
+  <h1>Hello world!</h1>
+  <h2>Nice to see You here!</h2>
+  <h3>Testing...</h3>
 </body>
 
 </html>
