--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
   <h1>Hello world!</h1>
   <h2>Nice to see You here!</h2>
-  <h3>Testing...</h3>
+  <h3>Working...</h3>
+  
+<script>
+  let greet='Hello world';
+  console.log(greet);
+</script>
 </body>
 
 </html>
