--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Hello world!</h1>
   <h2>Test, one-two!</h2>
-  <h3>Working...</h3>
+  <h3>Works just fine</h3>
   
 <script>
   let greet='Hello world';
