--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <h1>Hello world!</h1>
+  <h1 class="card-header">Hello world!</h1>
   <h2>Test, one-two!</h2>
-  <h3>Works just fine</h3>
+  <h3>Works just fin</h3>
   
 <script>
   let greet='Hello world';
