--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
   <h1 class="card-header">Hello world!</h1>
   <h2>Test, one-two!</h2>
-  <h3>Works just fin</h3>
+  <h3>Works just fine</h3>
   
 <script>
   let greet='Hello world';
   console.log(greet);
 </script>
+
+<script src="main.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
