--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
   <link rel="stylesheet" href="style.css" title="" type="" />
-  
+  <script src="main.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
 <body>
-  <h1 class="card-header">Hello world!</h1>
-  <h2>Test, one-two!</h2>
-  <h3>Works just fine</h3>
   
-<script>
-  let greet='Hello world';
-  console.log(greet);
-</script>
-
-<script src="main.js" type="text/javascript" charset="utf-8"></script>
+  <h1 class="card-header">
+    <script>
+    greet
+    </script>
+  </h1>
+  
+  <h2 class="card-body">Test, one-two!</h2>
+  <h3>Works just fine</h3>
 </body>
 
 </html>
