--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   
   <h1 class="card-header">
     <script>
-    greet
+    document.write(greet);
     </script>
   </h1>
   
   <h2 class="card-body">Test, one-two!</h2>
-  <h3>Works just fine</h3>
+  <h3><script>
+     document.write(greet);
+   </script></h3>
 </body>
 
 </html>
